# swift

./: .gitignore  CMakeLists.txt
cmake/modules/: AddSwift.cmake  FindICU.cmake  SwiftAddCustomCommandTarget.cmake  SwiftHandleGybSources.cmake  SwiftList.cmake  SwiftSetIfArchBitness.cmake  SwiftSharedCMakeConfig.cmake  SwiftSource.cmake
docs/: Windows.md
include/swift/Runtime/: Config.h
lib/Basic/: CMakeLists.txt
lib/ClangImporter/: ClangAdapter.cpp  ClangImporter.cpp  ImportDecl.cpp  ImportEnumInfo.cpp  ImportName.h  ImportType.cpp  SwiftLookupTable.cpp
stdlib/: CMakeLists.txt
stdlib/public/SwiftShims/: CMakeLists.txt
stdlib/public/core/: CMakeLists.txt
stdlib/public/runtime/: CMakeLists.txt
stdlib/public/stubs/: CMakeLists.txt
tools/SourceKit/tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt
tools/swift-ide-test/: CMakeLists.txt
tools/swift-remoteast-test/: CMakeLists.txt
utils/: line-directive  line-directive-file  update-checkout.cmd
